unpackaged/main/default/objects/blng__FinancePeriod__c/blng__FinancePeriod__c.object-meta.xml
<CustomObject>
    <label>Finance Period</label>
    <nameField>
        <label>Financial Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finance Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>