unpackaged/main/default/objects/blng__FinancePeriod__c/fields/blng__PeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>blng__PeriodEndDate__c</fullName>
    <inlineHelpText>Sélectionnez une date de fin pour la période de financement.</inlineHelpText>
    <label>Period End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>