unpackaged/main/default/objects/blng__FinancePeriod__c/fields/blng__PeriodStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__PeriodStatus__c</fullName>
    <inlineHelpText>Sélectionnez En cours pour capturer toutes les transactions ou Fermé pour empêcher les futures transactions.</inlineHelpText>
    <label>Period Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__FinancialPeriodStatus</valueSetName>
    </valueSet>
</CustomField>