unpackaged/main/default/objects/blng__FinancePeriod__c/fields/blng__PeriodType__c.field-meta.xml
<CustomField>
    <fullName>blng__PeriodType__c</fullName>
    <formula>Text(blng__FinanceBook__r.blng__PeriodType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Référence au type de période sélectionné dans le livre de finance.</inlineHelpText>
    <label>Period Type</label>
    <type>Text</type>
</CustomField>