unpackaged/main/default/objects/blng__FinancePeriod__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__FinanceBook__c</columns>
    <columns>blng__LegalEntity__c</columns>
    <columns>blng__PeriodStartDate__c</columns>
    <columns>blng__PeriodEndDate__c</columns>
    <columns>blng__PeriodStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>